[WIP] fix: z-index of secondary menu dropdown

--- a/clj/src/slipstream/ui/views/css/secondary-menubar.css
+++ b/clj/src/slipstream/ui/views/css/secondary-menubar.css
@@ -12,6 +12,8 @@ body.ss-error-page #ss-secondary-menubar-container {
 }
 
 #ss-secondary-menubar-container {
+  position: relative;
+  z-index: 1;
   opacity: 0.98;
   width: 100%;
   height: 30px;
@@ -24,7 +26,6 @@ body.ss-error-page #ss-secondary-menubar-container {
 
 #ss-secondary-menubar-container.affix {
   position: fixed;
-    z-index:10;
 }
 
 /* Breadcrumbs */
